--- a/src/public/css/user_style.css
+++ b/src/public/css/user_style.css
@@ -524,6 +524,7 @@ display: flex;
   
     #emptyss{
     margin-top:15px;
+    display: none;
     }
     #emptyss{
     text-align:center;
@@ -540,7 +541,7 @@ display: flex;
     background-clip: border-box;
     border-top: 1px solid #e3e6f0;
     overflow-x:scroll;
-    /* display: none; */
+    display: none;
     }
     .pre-nex{
     display:flex;
@@ -561,9 +562,9 @@ display: flex;
     }
 
     /* loading for table */
-/* .hideafter{
+.hideafter{
     display:none;
-    } */
+    }
     .loadingss{
      width:100%;
     margin-top:50px;
@@ -1548,6 +1549,35 @@ padding:40px 120px 60px 120px;
       position: relative;
       top:0;
     }
+
+
+    .modal-footer .center-loading-3 div{
+      padding:5px 5px;
+      display: inline-block;
+      border-radius: 50%;
+    }
+  
+    .modal-footer .center-loading-3 .span5load2{
+      background: #fff;
+      animation: moving_animate5 .25s infinite linear alternate;
+      animation-delay: 0;
+      position: relative;
+      top:0;
+    } .modal-footer .center-loading-3 .span6load2{
+      background: #fff;
+      animation: moving_animate6 .25s infinite linear alternate;
+      animation-delay: 0;
+      position: relative;
+      top:0;
+    }
+    .modal-footer .center-loading-3 .span7load2{
+      background: #fff;
+      animation: moving_animate7 .25s infinite linear alternate;
+      animation-delay: 0;
+      position: relative;
+      top:0;
+    }
+  
     @keyframes moving_animate5 {
       0%{
           top:-3px;
@@ -1751,8 +1781,11 @@ text-align: center;
   border:none;
   outline:none;
 }
+
 .modal-body #name_title{
   font-size:16px;
+  margin-top: 7px;
+  margin-bottom: 5px;
   color:rgb(157, 155, 155);
 }
             
@@ -2976,4 +3009,19 @@ width: 100%;
           .main_content_message{
             width:100%;
           }
+        }
+        .modal-content .close_modal{
+          color:#0095a4;
+          border: none;
+          background: none;
+          padding: 0;
+          font-size: 30px;
+          position: relative;
+          top:5px;
+          font-weight: 600;
+          transform: rotate(45deg);
+          cursor: pointer;
+        }
+        .modal-header{
+          padding:0 15px;
         }
