--- a/src/public/css/user_style.css
+++ b/src/public/css/user_style.css
@@ -1733,9 +1733,9 @@ text-align: center;
   }
   .navbar-brand #logonav {
     width:100%;
-    height:auto;
+    height:57px;
     margin-left:-16px;
-    z-index:0;
+    z-index:100;
     margin-top:-1.5px;
     text-align:center;
     object-fit: cover;  
