--- a/src/public/css/user_style.css
+++ b/src/public/css/user_style.css
@@ -506,13 +506,13 @@ display: flex;
     .fa-check-circle:hover{
       color:#0095a4;
     }
-    #btn .fa-eye,#btn .fa-edit ,#btn .fa-message ,#btn .fa-user-slash,#btn .fa-toggle-off,#btn .fa-toggle-on, #btn .fa-trash-alt, #btn .fa-trash{
+    #btn .fa-eye,#btn .fa-edit, #btn .fa-cart-arrow-down ,#btn .fa-message ,#btn .fa-user-slash,#btn .fa-toggle-off,#btn .fa-toggle-on, #btn .fa-trash-alt, #btn .fa-trash{
     color:gray;
     font-size:20px;
     margin:0 5px;
     cursor:pointer;
     } 
-    #btn .fa-eye:hover,#btn .fa-edit:hover{
+    #btn .fa-eye:hover,#btn .fa-edit:hover, #btn .fa-cart-arrow-down:hover{
     color:#0095a4;
     } #btn .fa-user-slash:hover,#btn .fa-trash-alt:hover,#btn .fa-trash:hover, #btn .fa-message:hover{
     color:#0095a4;
@@ -1903,7 +1903,7 @@ text-align: center;
   font-weight: 600;
 }
 .div2{
-  width:auto;
+  width:100%;
 }
 .div2 .boxes2{
     margin:auto;
@@ -1927,20 +1927,67 @@ text-align: center;
 
 .div1{
   width:auto;
-      margin-left:auto;
   }
   .div1 .boxes{
       width:100%;
       height:auto;
-      margin-bottom:1.5em;
       background:white;
       border-radius:10px;
-      box-shadow: 0px 3px 16px 0px rgba(0,0,0,0.2);
-      padding:20px 15px 30px 15px;
+      box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
+      padding:20px 15px 15px 15px;
       cursor:pointer;
-  }.title p{
+      margin: 0px 0px 15px 0;
+      transition: all ease .35s;
+  }.div1 .boxes:hover{
+      transform:  scale(1.02)
+  }
+  .div1 .body-boxes div img{
+    object-fit: cover;
+    min-height:auto;
+    width:100%;
+    height: auto;
+    border-radius: 5px;
+}
+  @media(min-width:650px){
+    .div1 {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: start;
+    }
+    .div1 .body-boxes div img{
+      object-fit: cover;
+      min-height:auto;
+      width:100%;
+      height: 250px;
+  }
+    .div1 .boxes{
+      width: 48%;
+      margin: 5px 2px;
+      padding:20px 15px 0 15px;
+    }
+  }
+  @media(min-width:700px){
+    .div1 .boxes{
+      width: 48%;
+      margin: 5px;
+    }
+  }
+  @media(min-width:1200px){
+    .div1 .boxes{
+      width: 24%;
+      margin: 5px 2px;
+    }
+  }
+  @media(min-width:1250px){
+    .div1 .boxes{
+      width: 24%;
+      margin: 5px;
+    }
+  }
+  .title p{
       font-weight:700;
       color:#0095a4;
+      margin-top: 10px;
   } 
   .body-boxes div img{
       object-fit: cover;
@@ -1964,50 +2011,7 @@ transition:all ease .35s;
 width: 100%;
 }
 
-  @media (min-width:700px){
-    .div1 {
-      display:flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-  }
-    .body-boxes div img{
-      object-fit: cover;
-      min-height:auto;
-      width:100%;
-      height: 250px;
-  }
-  .room-btn{
-    display: flex !important;
-  } 
-  .room-btn #view,   .room-btn #book{
-    width: auto;
-    margin-right: 10px;
-  }
-      .div1 .boxes{
-        width:49%;
-        margin-left: 5px;
-    }
-  }
-
-  @media(min-width:1200px){
-     .div1 .boxes{
-        width:48.9%;
-        margin-left:5px;
-        margin-right:5px;
-    }
-} 
-@media(min-width:1400px){
-    .div1 {
-        display:flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-     .div1 .boxes{
-        width:32%;
-        margin-left:7px;
-        margin-right:7px;
-    }
-}
+  
 .hide_titles{
   display:none;
 }
@@ -3249,3 +3253,88 @@ width: 100%;
             bottom:-2px;
             left:25px;
           }
+          .search-container {
+            width:100%;
+          }
+          .sortwidth{
+            width: 100%;
+            height:40px;
+          }
+          .search-view-list #search_2{
+            border-radius: 5px;
+            width:100%;
+            background:#fff;
+            padding-right:40px;
+            padding-top:5px;
+            padding-bottom:5px;
+            padding-left:45px;
+            border:solid 3px white;
+            box-shadow: 0px 0px 2px 0px #D3D3D3;
+          }
+          .search-view-list #search_2:focus{
+            border:solid 3px #0095a4;
+          }
+          .search-view-list .search_icon2{
+            position: absolute;
+            left:8px; top:8px;
+            padding: 0 8px;
+            font-size:1.5em;
+            font-style: normal;
+            color:#D3D3D3;
+            font-weight:0;
+            user-select: none;
+            cursor: pointer;
+          }
+          @media(min-width:600px){
+            .sortwidth{
+              width:9.9em;
+            }
+            .search-container {
+              display: flex;
+            }
+            .search-view-list{
+              width:100%;
+            }
+          }
+          .bottomtable2{
+            padding:15px 10px;
+            background-clip: border-box;
+            margin-top: 20px;
+            background: #fff;
+            overflow-x:scroll;
+            box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
+            border-radius: 10px;
+            }
+            .pre-nex2{
+            display:flex;
+            justify-content:space-between;
+            }.pre-nex2 p, .pre-nex2 a{
+            margin:0 10px;
+            }.pagess2{
+            color: #0095a4;
+            font-weight:700;
+            text-decoration:none;
+            cursor:pointer;
+            }
+            .nomore2{
+            color: rgb(143, 141, 141);
+            cursor: not-allowed;
+            }
+        
+            .title-sorting{
+              width: 100%;
+                  
+            }
+          
+            .title-sorting p{
+              font-size: 20px;
+              color: #0095a4;
+              letter-spacing: 2px;
+              text-transform: uppercase;
+            }
+            .pagess22{
+              color: #0095a4;
+              font-weight:700;
+              text-decoration:none;
+            }
+          
