--- a/public/css/user_style.css
+++ b/public/css/user_style.css
@@ -2818,6 +2818,7 @@ width: 100%;
       max-width: 100%;
       white-space: nowrap;
       overflow: hidden !important;
+      color:#0095a4;
       text-overflow: ellipsis;
     }
       .mess_loop span{
