--- a/public/css/user_style.css
+++ b/public/css/user_style.css
@@ -3479,3 +3479,53 @@ width: 100%;
             width:70px; 
             border-radius: 0;
         }
+
+
+        .rowss-operation .button-add-emp-66 #addbtnuser{
+            
+          width: 100%;
+          margin-top: 0;
+          font-size:16px;
+          cursor:pointer;
+          padding:6px 12px;
+          border-radius:5px;
+          border:none;
+          outline:none;
+          background: #0095a4;
+          transition:all ease .35s;
+          color:white;
+          width:100%;
+        }
+        #admin_pro{
+          margin-top:5px;
+          color:#0095a4;
+          font-weight: 600;
+        }
+        #admin_titleview_image{
+          margin-top:22px;
+          color:#0095a4;
+          font-weight: 600;
+          font-size: 60px;
+        }
+        @media(max-width:700px){
+          #admin_titleview_image{
+            margin-top:22px;
+            color:#0095a4;
+            font-weight: 600;
+            font-size: 30px;
+          }
+        }
+        #deleteallnotif{
+          font-size:16px;
+          cursor:pointer;
+          padding:6px 12px;
+          margin-top: -10px;
+          border-radius:5px;
+          border:none;
+          outline:none;
+            background: #0095a4;
+          transition:all ease .35s;
+          color:white;
+          width:100%;
+        }
+        
